login and button-widget

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -51,6 +51,7 @@ body{background-color:#fff !important;}
 html,body{height: 100%;}
 button i{margin-right: 10px;}
 .label{padding: 0.3em .6em .3em !important;}
+button:hover{opacity: 0.92}
 
 @import "base-bin.less";
 @import "widget/popup-widget.less";
