--- a/static/css/home/login.css
+++ b/static/css/home/login.css
@@ -1,8 +1,95 @@
-.background {
+body {
+  overflow: hidden;
+}
+.warpper {
   position: absolute;
   left: 0;
   top: 0;
+  background: url(../../image/admin/static/background-4.jpg) center;
   width: 100%;
   height: 100%;
-  background: url(../../image/admin/static/background-1.jpg) center no-repeat;
+  transition: all 40s ease;
+}
+.warpper:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.warpper.animate {
+  -webkit-transform: scale(1.3, 1.3);
+  -mz-transform: scale(1.3, 1.3);
+  -ms-transform: scale(1.3, 1.3);
+  transform: scale(1.3, 1.3);
+}
+.login {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  width: 350px;
+  height: 347px;
+  background-color: #fff;
+}
+.login .head-image {
+  width: 100%;
+  position: relative;
+}
+.login .head-image img {
+  border: 10px solid #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: -60px;
+  width: 90px;
+  border-radius: 100%;
+}
+.login .login-main {
+  margin: 15px 30px;
+  margin-top: 75px;
+}
+.login .login-main .login-from {
+  margin-top: 20px;
+}
+.login .tishi {
+  float: right;
+  margin-top: 14px;
+}
+.login .tishi a {
+  font-size: 12px;
+  color: #aaa;
+  text-decoration: none;
+}
+.login .label-input {
+  float: left;
+  background-color: #f2f2f2;
+  padding: 12px 15px;
+  color: #aaa;
+}
+.login input[type='text'],
+.login input[type='password'] {
+  background-color: #fafafa;
+  color: #444;
+  width: 231px;
+  padding-left: 15px;
+  border: 1px solid #eee;
+  margin-top: -1px;
+  margin: 0 auto;
+  font-size: 12px;
+  height: 40px;
+  margin-bottom: 10px;
+}
+.login .left_input {
+  border-left: 0px !important;
+}
+.login button {
+  width: 290px;
+  margin-top: 0px;
+  height: 45px;
 }
