--- a/static/less/base.less
+++ b/static/less/base.less
@@ -47,7 +47,6 @@ button{outline:none !important;}
 .fr{float: right !important}
 .left_nav a{color:#333 !important;}
 a:hover{text-decoration: none!important}
-body{background-color:#fff !important;}
 html,body{height: 100%;}
 button i{margin-right: 10px;}
 .label{padding: 0.3em .6em .3em !important;}
@@ -56,3 +55,4 @@ button:hover{opacity: 0.92}
 @import "base-bin.less";
 @import "widget/popup-widget.less";
 @import "widget/button-widget.less";
+@import "admin/admin-style.less";
