--- a/static/css/home/login.css
+++ b/static/css/home/login.css
@@ -5,7 +5,8 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  background: url(../../image/admin/static/background-4.jpg) center;
+  margin-left: 0;
+  background: url(../../image/admin/static/background-5.jpg) center;
   width: 100%;
   height: 100%;
   transition: all 40s ease;
@@ -17,7 +18,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .warpper.animate {
   -webkit-transform: scale(1.3, 1.3);
@@ -33,7 +34,7 @@ body {
   top: 0;
   margin: auto;
   width: 350px;
-  height: 347px;
+  height: 343px;
   background-color: #fff;
 }
 .login .head-image {
@@ -56,6 +57,12 @@ body {
 }
 .login .login-main .login-from {
   margin-top: 20px;
+}
+.login .login-main .success {
+  text-align: center;
+  line-height: 143px;
+  font-size: 14px;
+  color: #777;
 }
 .login .tishi {
   float: right;
@@ -81,12 +88,21 @@ body {
   border: 1px solid #eee;
   margin-top: -1px;
   margin: 0 auto;
-  font-size: 12px;
+  font-size: 14px;
   height: 40px;
   margin-bottom: 10px;
 }
 .login .left_input {
   border-left: 0px !important;
+}
+.login .verification > img {
+  float: right;
+  width: 84px;
+  margin-right: 4px;
+  height: 40px;
+}
+.login .verification > input {
+  width: 180px !important;
 }
 .login button {
   width: 290px;
