--- a/static/less/page/login.less
+++ b/static/less/page/login.less
@@ -4,7 +4,8 @@ body{
 .warpper{
 	position: absolute;
 	left:0;top:0;
-	background:url(../../image/admin/static/background-4.jpg) center;
+	margin-left: 0;
+	background:url(../../image/admin/static/background-5.jpg) center;
 	width: 100%;
 	height:100%;
 	transition:all 40s ease;
@@ -16,7 +17,7 @@ body{
 	left:0;
 	width:100%;
 	height:100%;
-	background-color: rgba(0,0,0,0.3)
+	background-color: rgba(0,0,0,0.2)
 }
 .warpper.animate{
 	-webkit-transform:scale(1.3 , 1.3);
@@ -30,7 +31,7 @@ body{
 	left:0;right:0;bottom:0;top:0;
 	margin:auto;
 	width:350px;
-	height:347px;
+	height:343px;
 	background-color: #fff;
 
 	// 登录框头像样式
@@ -53,6 +54,12 @@ body{
 		margin-top:75px;
 		.login-from{
 			margin-top:20px;
+		}
+		.success{
+			text-align: center;
+			line-height: 143px;
+			font-size: 14px;
+			color:#777;
 		}
 	}
 	
@@ -79,7 +86,7 @@ body{
 		border:1px solid #eee;
 		margin-top: -1px;
 		margin:0 auto;
-		font-size: 12px;
+		font-size: 14px;
 		// font-size: 20px;
 		height:40px;
 		margin-bottom: 10px;
@@ -87,6 +94,18 @@ body{
 	.left_input{
 		border-left: 0px !important;
 	}
+	.verification{
+		> img{
+			float: right;
+			width:84px;
+			margin-right: 4px;
+			height:40px;
+		}
+		> input{
+			width:180px !important;
+		}
+	}
+
 
 	button{
 		width:290px;
