--- a/static/less/widget/popup-widget.less
+++ b/static/less/widget/popup-widget.less
@@ -1,4 +1,20 @@
-
+.toast{
+	position: fixed;
+	top:-10%;
+	left:0;
+	right:0;
+	margin:0 auto;
+	text-align: center;
+	.transition(top , 0.2s , ease-in);
+	p{
+		color:#fff;
+		display:inline-block;
+		padding:15px 20px;
+		border-radius: 5px;
+		font-size: 15px;
+		background-color: rgba(0,0,0,0.5)
+	}
+}
 
 .popup-main{
 	display: none;
